Added the questions and made changes on that

--- a/aboutme-html5.html
+++ b/aboutme-html5.html
@@ -34,21 +34,20 @@ h2 {
 <body>
 <h1><img src="images/me.jpg" alt="Flavio Pereira"/><br>Flavio Pereira</h1>
 
-<h2>About me</h2>
-<p> I'm a Brazilian guy working as Technical Support Engineer for <a href="http://www.suse.com">SUSE Company</a>. I'm living in Utah since 2010 with my lovely wife. As a typical Brazilian, I love soccer but after 4 years living with this cold winter, I started to pratice snowboard and I really like it!<br></p>
+ <h2> In 2+ sentences describe who you are and what you do. </h2>
 
- <p> Talking about my wife, I must say that she loves to cook and I hope this class would help me to improve her website - <a href="http://claudiasrecipe.blogspot.com"> Receita da Clau </a> - This will be my challenging final project!<br></p>
+  <p> My name is Flavio Santino Pereira and I'm a Brazilian guy working as a Linux Technical Support Engineer for <a href="http://www.suse.com">SUSE Company</a>. I'm living in U.S, more specifically in Utah, since 2010 with my lovely wife. As a typical Brazilian, I love soccer but after 4 years living with this cold winter, I started to pratice snowboard and I really like it!<br></p>
 
- <p>These are some of the things that I like:</p>
+  <p> Talking about my wife, I must say that she loves to cook and I hope this class would help me to improve her website - <a href="http://claudiasrecipe.blogspot.com"> Receita da Clau </a><br></p>
 
-<ul>
-  <li>Soccer</li>
-  <li>Snowboard</li>
-  <li>Linux</li>
-  <li>Video Games</li>
-  <li>Outdoor sports</li>
-  <li>Travel</li>
-</ul> 
+ <h2>Why are you taking this course?</h2>
+
+ <h2>What previous experience do you have with programming?</h2>
+
+ <h2>Are you working on a Mac, PC, or some other platform?</h2>
+
+ <h2>Anything else we should know?</h2>
+
 
 
 </body>
