--- a/aboutme-html5.html
+++ b/aboutme-html5.html
@@ -32,7 +32,7 @@ h2 {
 </head>
 
 <body>
-<h1><img src="images/me.jpg" alt="Flavio Pereira"/><br>Flavio Pereira</h1>
+<h1>Flavio Pereira<br><img src="images/me.jpg" alt="Flavio Pereira"/></h1>
 
  <h2> In 2+ sentences describe who you are and what you do. </h2>
 
