Added P1 for index.hmtl file

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@ h2 {
 <body>
 <h1><img src="images/me.jpg" alt="Flavio Pereira"/><br>Flavio Pereira</h1>
 
+<h2>Project 1</h2>
+	
+	<p> View: <a href="http://p1.pezao.me">p2.pezao.me</a><br></p>
+   	<p>Github link: <a href="https://github.com/flavio-pereira/P1"> https://github.com/flavio-pereira/P1</a></p>
+
 <h2>Project 2</h2>
 
    <p> View: <a href="http://p2.pezao.me">p2.pezao.me</a><br></p>
