Created css file

--- a/index.html
+++ b/index.html
@@ -3,32 +3,9 @@
 <html>
 
 <head>
-<meta charset="utf-8">
-
-<title>Flavio Pereira P1 -Portfolio</title>
-  <style>
-
-body {
-	background-color: #E0DBD1;
-	margin: 0 15%;
-	font-family: sans-serif;
-	}
-
-h1 {
-	text-align: center;
-	font-family: sans-serif;
-	font-weight: normal;
-	text-transform: uppercase;
-	border-bottom: 1px solid #57b1dc;
-	margin-top: 30px;
-}
-
-h2 {
-	color: #d1633c;
-	font-size: 1em;
-}
-
-   </style>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="aboutme.css">
+	<title>Flavio Pereira P1 -Portfolio</title>
 </head>
 
 <body>
@@ -36,7 +13,7 @@ h2 {
 
 <h2>Project 1</h2>
 	
-	<p> View: <a href="http://p1.pezao.me">p2.pezao.me</a><br></p>
+	<p> View: <a href="http://p1.pezao.me">p1.pezao.me</a><br></p>
    	<p>Github link: <a href="https://github.com/flavio-pereira/P1"> https://github.com/flavio-pereira/P1</a></p>
 
 <h2>Project 2</h2>
