Fixed some typos

--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
  
  <h2> In 2+ sentences describe who you are and what you do. </h2>
 
-  <p> My name is Flavio Santino Pereira and I'm a Brazilian guy working as a Linux Technical Support Engineer for <a href="http://www.suse.com">SUSE Company</a>. I'm living in U.S, more specifically in Utah, since 2010 with my lovely wife. I have over 9 years in IT related fields working with Linux environments performing consulting and support work. As a typical Brazilian, I love soccer but after 4 years living with this cold winter, I started to pratice snowboard and I really like it!<br></p>
+  <p> My name is Flavio Santino Pereira and I'm a Brazilian guy working as a Linux Technical Support Engineer for <a href="http://www.suse.com">SUSE Company</a>. I'm living in US, more specifically in Utah, since 2010, with my lovely wife. I have over 9 years in IT related fields, working with Linux environments, performing consulting, and support work. As a typical Brazilian, I love soccer, but after 4 years living with this cold winter, I started to pratice snowboard and I really like it!<br></p>
   
 
  <h2>Why are you taking this course?</h2>
 
-   <p> I would like to learn more about Web development and I believe this course will give me the right skills to start. I took the CSCI-12 class which gave me a better understanding of how html/css works and I think it is time to learn more about dynamic web pages.<p>
+   <p> I would like to learn more about Web development and I believe this course will give me the right skills to start. I took the CSCI-12 class, which gave me a better understanding of how html/css works, and I think it is time to learn more about dynamic web pages.<p>
 
  <h2>What previous experience do you have with programming?</h2>
 
- 	<p>I don't have any expirence with code as I it is not in scope of my work day basis. However, I have a basic understanding of shell script as I need to read it in order to understand some issues in Linux.</p>
+ 	<p>I don't have any expirence with code as it is not in the scope of my work day basis. However, I have a basic understanding of shell script as I needed it to understand some issues in Linux.</p>
 
 
  <h2>Are you working on a Mac, PC, or some other platform?</h2>
 
-    <p>I'm mainly work with Linux and Mac as I'm really safe with command line. I use git during my work as we need to check changes made on the linux kernel and find if some problem was already fixed upstream.</p>
+    <p>I'm mainly work with Linux and Mac as I'm really safe with command line. I use git during my work as we need to check all changes made on the linux kernel and find if some problem was already fixed upstream.</p>
 
  <h2>Anything else we should know?</h2>
 
- 	<p> I'm excited about this course and I'm really up to the challange. I might strugle with code but I belive I will enjoy this course a lot.</p>
+ 	<p> I'm excited about this course and I'm really up to the challange. I might strugle with code, but I'll do my best and I belive I will enjoy this course a lot.</p>
 
 
 </body>
