Fixed Photo, added Bootstrap and fixed some CSS styles

--- a/index.html
+++ b/index.html
@@ -4,53 +4,56 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="aboutme.css">
+   
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="aboutme.css">
+
 	<title>Flavio Pereira P1 -Portfolio</title>
 </head>
 
 <body>
-<h1><img src="images/me.jpg" alt="Flavio Pereira"/><br>Flavio Pereira</h1>
+<h1><img src="images/flavio-face.jpg" alt="Flavio Pereira"/><br>Flavio Pereira</h1>
 
-<h2>Project 1</h2>
+<h3>Project 1</h3>
 	
-	<p> View: <a href="http://p1.pezao.me">p1.pezao.me</a><br></p>
+	  <p> View: <a href="http://p1.pezao.me">p1.pezao.me</a><br></p>
    	<p>Github link: <a href="https://github.com/flavio-pereira/P1"> https://github.com/flavio-pereira/P1</a></p>
 
-<h2>Project 2</h2>
+<h3>Project 2</h3>
 
    <p> View: <a href="http://p2.pezao.me">p2.pezao.me</a><br></p>
    <p>Github link: <a href="https://github.com/flavio-pereira/P2"> https://github.com/flavio-pereira/P2</a></p>
 
-<h2>Project 3</h2>
+<h3>Project 3</h3>
 
    <p> View: <a href="http://p3.pezao.me">p3.pezao.me</a><br></p>
    <p>Github link: <a href="https://github.com/flavio-pereira/P3"> https://github.com/flavio-pereira/P3</a></p>
 
-<h2>Project 4</h2>
+<h3>Project 4</h3>
 
    <p> View: <a href="http://p4.pezao.me">p4.pezao.me</a><br></p>
    <p>Github link: <a href="https://github.com/flavio-pereira/P4"> https://github.com/flavio-pereira/P4</a></p>
 
  
- <h2> In 2+ sentences describe who you are and what you do. </h2>
+ <h3> In 2+ sentences describe who you are and what you do. </h3>
 
   <p> My name is Flavio Santino Pereira and I'm a Brazilian guy working as a Linux Technical Support Engineer for <a href="http://www.suse.com">SUSE Company</a>. I'm living in US, more specifically in Utah, since 2010, with my lovely wife. I have over 9 years in IT related fields, working with Linux environments, performing consulting, and support work. As a typical Brazilian, I love soccer, but after 4 years living with this cold winter, I started to pratice snowboard and I really like it!<br></p>
   
 
- <h2>Why are you taking this course?</h2>
+ <h3>Why are you taking this course?</h3>
 
    <p> I would like to learn more about Web development and I believe this course will give me the right skills to start. I took the CSCI-12 class, which gave me a better understanding of how html/css works, and I think it is time to learn more about dynamic web pages.<p>
 
- <h2>What previous experience do you have with programming?</h2>
+ <h3>What previous experience do you have with programming?</h3>
 
  	<p>I don't have any expirence with code as it is not in the scope of my work day basis. However, I have a basic understanding of shell script as I needed it to understand some issues in Linux.</p>
 
 
- <h2>Are you working on a Mac, PC, or some other platform?</h2>
+ <h3>Are you working on a Mac, PC, or some other platform?</h3>
 
     <p>I'm mainly work with Linux and Mac as I'm really safe with command line. I use git during my work as we need to check all changes made on the linux kernel and find if some problem was already fixed upstream.</p>
 
- <h2>Anything else we should know?</h2>
+ <h3>Anything else we should know?</h3>
 
  	<p> I'm excited about this course and I'm really up to the challange. I might strugle with code, but I'll do my best and I belive I will enjoy this course a lot.</p>
 
