Made changes on the picture

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<h1><img src="images/flavio-face.jpg" alt="Flavio Pereira"/><br>Flavio Pereira</h1>
+<h1><img src="images/flavio-face.jpg" alt="Flavio Pereira" class="img-rounded"/><br>Flavio Pereira</h1>
 
 <h3>Project 1</h3>
 	
